manifest/base/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projectserver-dep
spec:
  replicas: 1
  selector:
      matchLabels:
        app: projectserver
  template:
      metadata:
        labels:
            app: projectserver
      spec:
        volumes: 
        - name: shared-image
          persistentVolumeClaim:
            claimName: shared-image-pv-claim
        containers:
        - name: projectserver
          image: PROJECT/IMAGE_SERVER
          livenessProbe:
            initialDelaySeconds: 20 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /healthz
               port: 3000
          readinessProbe:
            initialDelaySeconds: 10 
            periodSeconds: 5 
            httpGet:
               path: /healthz
               port: 3000
          volumeMounts: 
          - name: shared-image
            mountPath: '/usr/app/public/image'
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
