manifest/base/DeploymentBroadcaster.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster
          image: PROJECT/IMAGE_BROADCASTER
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
