manifest/base/DeploymentTodos.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-dep
spec:
  replicas: 1
  selector:
      matchLabels:
        app: todos
  template:
      metadata:
        labels:
            app: todos
      spec:
        containers:
        - name: todos
          image: PROJECT/IMAGE_TODO
          readinessProbe:
            initialDelaySeconds: 10 
            periodSeconds: 5 
            httpGet:
                path: /healthz
                port: 3004
          livenessProbe:
            initialDelaySeconds: 20 
            periodSeconds: 5
            httpGet:
               path: /healthz
               port: 3004
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
